@@ -678,6 +678,15 @@ command_info_to_details(char * const info[], struct command_details *details)
 		SET_STRING("chroot=", chroot)
 		SET_STRING("command=", command)
 		SET_STRING("cwd=", cwd)
+		if (strncmp("cwd_optional=", info[i], sizeof("cwd_optional=") - 1) == 0) {
+		    cp = info[i] + sizeof("cwd_optional=") - 1;
+		    details->cwd_optional = sudo_strtobool(cp);
+		    if (details->cwd_optional == -1) {
+			errno = EINVAL;
+			sudo_fatal("%s", info[i]);
+		    }
+		    break;
+		}
 		if (strncmp("closefrom=", info[i], sizeof("closefrom=") - 1) == 0) {
 		    cp = info[i] + sizeof("closefrom=") - 1;
 		    details->closefrom = sudo_strtonum(cp, 0, INT_MAX, &errstr);
